@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opencastproject</groupId>
   <artifactId>base</artifactId>
-  <version>14-SNAPSHOT</version>
+  <version>16-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>opencast</name>
   <description>Opencast is a media capture, processing, management and distribution system</description>
@@ -19,22 +19,25 @@
     <aws.version>1.12.269_1</aws.version>
     <commons-codec.version>1.15</commons-codec.version>
     <commons-collections.version>4.4</commons-collections.version>
-    <commons-compress.version>1.21</commons-compress.version>
+    <commons-compress.version>1.26.0</commons-compress.version>
     <commons-csv.version>1.9.0</commons-csv.version>
     <commons-fileupload.version>1.5</commons-fileupload.version>
-    <commons-io.version>2.8.0</commons-io.version>
+    <commons-io.version>2.15.1</commons-io.version>
     <commons-lang3.version>3.12.0</commons-lang3.version>
     <commons-text.version>1.10.0</commons-text.version>
     <cxf.version>3.5.7</cxf.version>
-    <eclipselink.version>2.7.8</eclipselink.version>
+    <eclipselink.version>2.7.14</eclipselink.version>
+    <eclipselink.asm.version>9.5.0</eclipselink.asm.version>
+    <elasticsearch.version>7.10.2</elasticsearch.version>
     <failureaccess.version>1.0.1</failureaccess.version>
-    <freemarker.version>2.3.31</freemarker.version>
+    <freemarker.version>2.3.32</freemarker.version>
     <functional.version>1.4.2</functional.version>
     <gson.version>2.10.1</gson.version>
-    <guava.version>30.1.1-jre</guava.version>
-    <httpcomponents-httpclient.version>4.5.13</httpcomponents-httpclient.version>
+    <guava.version>32.1.3-jre</guava.version>
+    <failureaccess.version>1.0.2</failureaccess.version>
+    <httpcomponents-httpclient.version>4.5.14</httpcomponents-httpclient.version>
     <httpcomponents-httpcore.version>4.4.16</httpcomponents-httpcore.version>
-    <jackson.version>2.14.3</jackson.version>
+    <jackson.version>2.16.0</jackson.version>
     <jakarta.mail.version>1.6.7</jakarta.mail.version>
     <java.release>11</java.release>
     <javadoc-plugin.version>3.3.1</javadoc-plugin.version>
@@ -42,22 +45,24 @@
     <jettison.version>1.5.4</jettison.version>
     <joda-time.version>2.12.5</joda-time.version>
     <json-simple.version>1.1.1</json-simple.version>
-    <junit5.version>5.10.0</junit5.version>
+    <junit5.version>5.10.2</junit5.version>
     <karaf.version>4.4.4</karaf.version>
-    <node.version>v16.13.0</node.version>
+    <lucene.version>8.7.0</lucene.version>
+    <node.version>v20.12.2</node.version>
     <osgi.core.version>8.0.0</osgi.core.version>
     <osgi.annotation.version>8.1.0</osgi.annotation.version>
-    <org.osgi.service.component.version>1.5.0</org.osgi.service.component.version>
-    <org.osgi.service.component.annotations.version>1.5.0</org.osgi.service.component.annotations.version>
+    <org.osgi.service.component.version>1.5.1</org.osgi.service.component.version>
+    <org.osgi.service.component.annotations.version>1.5.1</org.osgi.service.component.annotations.version>
     <org.osgi.service.cm.version>1.6.0</org.osgi.service.cm.version>
     <org.osgi.service.log.version>1.5.0</org.osgi.service.log.version>
-    <org.osgi.service.http.version>1.2.1</org.osgi.service.http.version>
+    <org.osgi.service.http.version>1.2.2</org.osgi.service.http.version>
     <org.osgi.service.http.whiteboard.version>1.1.1</org.osgi.service.http.whiteboard.version>
     <org.osgi.service.jaxrs.version>1.0.1</org.osgi.service.jaxrs.version>
     <querydsl.version>3.7.4</querydsl.version>
     <rest-assured.version>4.4.0</rest-assured.version>
     <spring.version>3.1.4.RELEASE</spring.version>
     <spring-security.version>3.1.7.RELEASE</spring-security.version>
+    <xmlsec.version>2.2.6</xmlsec.version>
   </properties>
   <modules>
     <module>modules/admin-ui</module>
@@ -126,7 +131,6 @@
     <module>modules/email-template-service-api</module>
     <module>modules/email-template-service-impl</module>
     <module>modules/engage-paella-player-7</module>
-    <module>modules/engage-paella-player</module>
     <module>modules/engage-ui</module>
     <module>modules/event-comment</module>
     <module>modules/execute-api</module>
@@ -171,6 +175,7 @@
     <module>modules/oaipmh-persistence</module>
     <module>modules/oaipmh-remote</module>
     <module>modules/oaipmh</module>
+    <module>modules/playlists</module>
     <module>modules/plugin-manager</module>
     <module>modules/presets</module>
     <module>modules/publication-service-api</module>
@@ -190,9 +195,7 @@
     <module>modules/scheduler-remote</module>
     <module>modules/schema</module>
     <module>modules/search-service-api</module>
-    <module>modules/search-service-feeds</module>
     <module>modules/search-service-impl</module>
-    <module>modules/search-service-remote</module>
     <module>modules/security-aai</module>
     <module>modules/security-cas-client-wrapper</module>
     <module>modules/security-cas</module>
@@ -211,7 +214,6 @@
     <module>modules/smil-api</module>
     <module>modules/smil-impl</module>
     <module>modules/smil-workflowoperation</module>
-    <module>modules/solr</module>
     <module>modules/sox-api</module>
     <module>modules/sox-impl</module>
     <module>modules/sox-remote</module>
@@ -233,6 +235,7 @@
     <module>modules/statistics-service-remote</module>
     <module>modules/statistics-writer-workflowoperation</module>
     <module>modules/studio</module>
+    <module>modules/studio-service</module>
     <module>modules/termination-state-api</module>
     <module>modules/termination-state-aws</module>
     <module>modules/termination-state-impl</module>
@@ -375,7 +378,10 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <useFile>false</useFile>
-          <argLine>-Dfile.encoding=UTF-8</argLine>
+          <argLine>
+            -Dfile.encoding=UTF-8
+            --add-opens java.base/java.util=ALL-UNNAMED
+          </argLine>
           <!-- see https://jira.codehaus.org/browse/SUREFIRE-951 -->
           <systemPropertyVariables>
             <M2_REPO>${settings.localRepository}</M2_REPO>
@@ -569,28 +575,30 @@
           <version>5.1.9</version>
           <inherited>true</inherited>
           <configuration>
+            <obrRepository>NONE</obrRepository>
             <instructions>
               <Bundle-Category>opencastproject</Bundle-Category>
               <Bundle-DocURL>https://opencast.org/</Bundle-DocURL>
               <Bundle-Vendor>The Opencast Project</Bundle-Vendor>
               <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+              <Build-Number>${buildNumber}</Build-Number>
             </instructions>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M3</version>
+          <version>3.2.5</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.3.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
-          <version>1.8</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -605,22 +613,25 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-plugin-plugin</artifactId>
-          <version>3.6.0</version>
+          <version>3.11.0</version>
         </plugin>
         <plugin>
           <groupId>org.antlr</groupId>
           <artifactId>antlr4-maven-plugin</artifactId>
-          <version>4.7.2</version>
+          <version>4.13.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>3.5.0</version>
+          <version>3.6.0</version>
         </plugin>
         <plugin>
           <groupId>com.googlecode.maven-download-plugin</groupId>
           <artifactId>download-maven-plugin</artifactId>
-          <version>1.6.8</version>
+          <version>1.8.0</version>
+          <configuration>
+            <alwaysVerifyChecksum>true</alwaysVerifyChecksum>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -630,7 +641,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>3.5.0</version>
           <configuration>
             <sources>
               <source>${basedir}/src/main/resources/</source>
@@ -647,7 +658,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
-          <version>3.15.0</version>
+          <version>3.21.2</version>
           <configuration>
             <!--<includeTests>true</includeTests> -->
             <typeResolution>true</typeResolution>
@@ -664,13 +675,14 @@
           </executions>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>3.3.2</version>
         </plugin>
         <plugin>
           <groupId>com.github.eirslett</groupId>
           <artifactId>frontend-maven-plugin</artifactId>
-          <version>1.10.3</version>
+          <version>1.15.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -680,12 +692,12 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.1.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.1.2</version>
+          <version>3.6.1</version>
           <executions>
             <execution>
               <id>analyze</id>
@@ -697,18 +709,6 @@
               </configuration>
             </execution>
           </executions>
-          <dependencies>
-            <dependency>
-              <groupId>org.ow2.asm</groupId>
-              <artifactId>asm</artifactId>
-              <version>9.3</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.maven.shared</groupId>
-              <artifactId>maven-dependency-analyzer</artifactId>
-              <version>1.11.1</version>
-            </dependency>
-          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.karaf.tooling</groupId>
@@ -736,7 +736,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>3.2.1</version>
+            <version>3.3.0</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -764,7 +764,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>3.0.1</version>
+            <version>3.1.0</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -819,17 +819,12 @@
       <dependency>
         <groupId>org.antlr</groupId>
         <artifactId>antlr4-runtime</artifactId>
-        <version>4.7.2</version>
+        <version>4.13.1</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>3.1.0</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-jms_1.1_spec</artifactId>
-        <version>1.1.1</version>
       </dependency>
       <dependency>
         <groupId>org.apache.solr</groupId>
@@ -959,6 +954,11 @@
         <version>1.2.1</version>
       </dependency>
       <dependency>
+        <groupId>jakarta.annotation</groupId>
+        <artifactId>jakarta.annotation-api</artifactId>
+        <version>1.3.5</version>
+      </dependency>
+      <dependency>
         <groupId>com.sun.mail</groupId>
         <artifactId>jakarta.mail</artifactId>
         <version>${jakarta.mail.version}</version>
@@ -997,7 +997,7 @@
       <dependency>
         <groupId>org.eclipse.persistence</groupId>
         <artifactId>org.eclipse.persistence.asm</artifactId>
-        <version>${eclipselink.version}</version>
+        <version>${eclipselink.asm.version}</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.persistence</groupId>
@@ -1109,12 +1109,12 @@
       <dependency>
         <groupId>org.apache.santuario</groupId>
         <artifactId>xmlsec</artifactId>
-        <version>2.1.7</version>
+        <version>${xmlsec.version}</version>
       </dependency>
       <dependency>
         <groupId>org.owasp.esapi</groupId>
         <artifactId>esapi</artifactId>
-        <version>2.5.2.0</version>
+        <version>2.5.3.1</version>
       </dependency>
       <dependency>
         <groupId>org.opensaml</groupId>
@@ -1134,7 +1134,7 @@
       <dependency>
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.xerces</artifactId>
-        <version>2.12.1_1</version>
+        <version>2.12.2_1</version>
       </dependency>
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
@@ -1149,8 +1149,8 @@
       <dependency>
         <groupId>org.easymock</groupId>
         <artifactId>easymock</artifactId>
+        <version>5.1.0</version>
         <scope>test</scope>
-        <version>4.3</version>
       </dependency>
       <dependency>
         <groupId>org.easymock</groupId>
@@ -1167,7 +1167,7 @@
       <dependency>
         <groupId>xml-apis</groupId>
         <artifactId>xml-apis</artifactId>
-        <version>1.4.01</version>
+        <version>2.0.2</version>
       </dependency>
       <!-- logging -->
       <dependency>
@@ -1177,8 +1177,9 @@
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
+        <artifactId>slf4j-reload4j</artifactId>
         <version>1.7.36</version>
+        <scope>test</scope>
       </dependency>
       <!-- apache commons syncing -->
       <dependency>
@@ -1283,11 +1284,6 @@
             <artifactId>hamcrest-core</artifactId>
           </exclusion>
         </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.groovy</groupId>
-        <artifactId>groovy-all</artifactId>
-        <version>2.5.8</version>
       </dependency>
       <dependency>
         <groupId>org.hamcrest</groupId>
@@ -1541,7 +1537,7 @@
     <developer>
       <id>karen</id>
       <name>Karen Dolan</name>
-      <email>kdolan@dce.harvard.edu</email>
+      <email>karen_dolan@harvard.edu</email>
       <organization>Harvard University, Division of Continuing Education</organization>
       <organizationUrl>http://www.dce.harvard.edu</organizationUrl>
       <roles>
@@ -1653,9 +1649,9 @@
     <developer>
       <id>mtneug</id>
       <name>Matthias Neugebauer</name>
-      <email>matthias.neugebauer@uni-muenster.de</email>
-      <organization>University of Muenster</organization>
-      <organizationUrl>https://www.uni-muenster.de/</organizationUrl>
+      <email>mtneug@shio.solutions</email>
+      <organization>shio solutions GmbH, University of Muenster</organization>
+      <organizationUrl>https://shio.solutions, https://www.uni-muenster.de/</organizationUrl>
       <roles>
         <role>developer</role>
       </roles>
